[package]
name = "smart-account-oracle"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = "1.0.16"
clap = { version = "4.0", features = ["derive"] }
rand = "0.8"
rayon = "1.8"
crossbeam = "0.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1
